fixed alignment issues on Add/Edit forms

--- a/Frontend/admin/CurrentDomain/Achievements/styles2.css
+++ b/Frontend/admin/CurrentDomain/Achievements/styles2.css
@@ -126,6 +126,10 @@ body {
   display: none;
 }
 
+.newline{
+  display: block;
+}
+
 
 @media(max-width:650px) {
 
