--- a/Frontend/admin/CurrentDomain/Metrics/styles2.css
+++ b/Frontend/admin/CurrentDomain/Metrics/styles2.css
@@ -102,7 +102,9 @@ body {
   background-color:#01858f;
 }
 
-
+.newline{
+  display: block;
+}
 
 .Addbutton:hover{
   background-color:#01858f;
